--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ h1 {
   margin: 0px 10px 30px 10px;
 }
 .card.container1 {
-  background-image: url(../profilecard1/ad6d1bd01156597ad9c1c7f0af038d87.jpg);
+  background-image: url(profilecard1/ad6d1bd01156597ad9c1c7f0af038d87.jpg);
   border-radius: 15px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   max-width: 500px;
@@ -104,7 +104,7 @@ h1 {
   box-sizing: border-box;
 }
 .card.container2 {
-  background-image: url(../profilecard1/ac43d229eeeaec9a17d27226c89ab409.jpg);
+  background-image: url(profilecard1/ac43d229eeeaec9a17d27226c89ab409.jpg);
   border-radius: 15px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   max-width: 300px;
@@ -134,34 +134,15 @@ h3 {
   font-size: 12px;
 }
 @media (max-width:1280px) {
-  .card.container1, .card.container2 {
-    max-width: 90%;
-    margin: 25px auto;
-    padding: 30px;
-  }
-  #img1 {
-    width: 120px;
-    height: 120px;
-  }
-  h1 {
-    font-size: 24px;
-    margin-top: 15px;
-    margin-bottom: 15px;
-  }
-  #role {
-    font-size: 20px;
-    margin: 15px 15px 15px 15px;
-  }
-  #bio {
-    font-size: 24px;
-    margin: 0px 15px 40px 15px;
-  }
-}
-@media (max-width:1024px) {
-  .card.container1, .card.container2 {
+  .card.container1 {
     max-width: 80%;
     margin: 20px auto;
     padding: 25px;
+  }
+  .card.container2 {
+    max-width: 50%;
+    margin: 350px auto 20px auto;
+    padding: 15px;
   }
   #img1 {
     width: 110px;
@@ -181,11 +162,16 @@ h3 {
     margin: 0px 12px 35px 12px;
   }
 }
-@media (max-width: 800px) {
-  .card.container1, .card.container2 {
+@media (max-width: 1024px) {
+  .card.container1 { 
     max-width: 70%;
     margin: 15px auto;
     padding: 20px;
+  }
+  .card.container2 {
+    max-width: 60%;
+    margin: 320px auto 20px auto;
+    padding: 15px;
   }
   #img1 {
     width: 90px;
@@ -205,11 +191,16 @@ h3 {
     margin: 0px 10px 30px 10px;
   }
 }
-@media (max-width: 600px) {
-  .card.container1, .card.container2 {
+@media (max-width: 768px) {
+  .card.container1 { 
     max-width: 90%;
     margin: 10px auto;
     padding: 15px;
+  }
+  .card.container2 {
+    max-width: 70%;
+    margin: 300px auto 20px auto;
+    padding: 10px;
   }
   #img1 {
     width: 80px;
@@ -229,12 +220,18 @@ h3 {
     margin: 0px 8px 20px 8px;
   }
 }
+
 @media (max-width: 480px) {
-  .card.container1, .card.container2 {
+  .card.container1 { 
     max-width: 100%;
     margin: 5px auto;
     padding: 10px;
   }
+    .card.container2 {
+        max-width: 90%;
+        margin: 250px auto 20px auto;
+        padding: 5px;
+    }
   #img1 {
     width: 60px;
     height: 60px;
