--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ h1 {
   margin: 0px 10px 30px 10px;
 }
 .card.container1 {
-  background-image: url(profilecard1/ad6d1bd01156597ad9c1c7f0af038d87.jpg);
+  background-image: url(../profilecard1/ad6d1bd01156597ad9c1c7f0af038d87.jpg);
   border-radius: 15px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   max-width: 500px;
@@ -104,7 +104,7 @@ h1 {
   box-sizing: border-box;
 }
 .card.container2 {
-  background-image: url(profilecard1/ac43d229eeeaec9a17d27226c89ab409.jpg);
+  background-image: url(../profilecard1/ac43d229eeeaec9a17d27226c89ab409.jpg);
   border-radius: 15px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   max-width: 300px;
